--- a/public/styles/site/_variables.scss
+++ b/public/styles/site/_variables.scss
@@ -9,6 +9,7 @@ serif;
 $nav-bar-heigth: 75px;
 $header-height: 60vh;
 $home-banner: 80vh;
+$home-banner-mobile-version: 100vh;
 $dividor-height: 15vh;
 $footer-height: 230px;
 $primary-color: #8C2D19;
